# INF584-High_Resolution_Sparse_Voxel_DAGs

./: CMakeLists.txt  README.md
linux/: build_svo_builder.sh  build_tri_convert.sh  svo_builder  tri_convert
models/: dragon.tri  dragon1024_1.octree
src/svo_builder/: DAGBuilder.cpp  DAGBuilder.h  DAGNode.cpp  DAGNode.h  DAGmain.cpp
src/tri_convert/: timer.h
